fix: global fix text #2

--- a/nuxt/assets/css/index.pcss
+++ b/nuxt/assets/css/index.pcss
@@ -87,6 +87,10 @@ sup {
   vertical-align: super;
   h1 &, h2 & {
     font-size: 0.35em;
+
+    @media (--sm) {
+      font-size: .6em;
+    }
   }
   p &, h3 &, h4 &  {
     font-size: 0.6em;
