--- a/nuxt/assets/css/product/faq.pcss
+++ b/nuxt/assets/css/product/faq.pcss
@@ -1,5 +1,6 @@
 .faq {
   margin-bottom: var(--container-padding-h);
+  scroll-margin-top: var(--navbar-h);
 
   &__download {
     text-align: center;
