--- a/nuxt/assets/css/product/secret.pcss
+++ b/nuxt/assets/css/product/secret.pcss
@@ -104,7 +104,8 @@
       color: var(--color-violet);
     }
     & > p {
-      font-weight: 400;
+      font-weight: 300;
+      line-height: 1.3;
     }
   }
 
