--- a/nuxt/assets/css/case/factors.pcss
+++ b/nuxt/assets/css/case/factors.pcss
@@ -60,6 +60,10 @@
         text-align: center;
         word-break: break-all; 
       }
+
+      @media (--sm) {
+        font-size: 12px;
+      }
     }
   }
 
