--- a/nuxt/assets/css/index.pcss
+++ b/nuxt/assets/css/index.pcss
@@ -31,6 +31,10 @@ html, body {
   padding-left: var(--container-padding-w);
 }
 
+section {
+  scroll-margin-top: var(--navbar-h);
+}
+
 .text-al-center {
   text-align: center;
 }
